# mail-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: classifier.py  orchestrator.py
config/: categories.yaml  gmail_credentials.example.json  prompts.py  settings.py
email_classifier_agent/: main.py
mcp_clients/: gmail_direct_client.py  outlook_client.py
models/: schemas.py
ui/: app.py
utils/: errors.py  logging.py
